--- a/index.html
+++ b/index.html
@@ -88,3 +88,4 @@
 </body>
 
 </html>
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "efbfc61af2444f0d8648f22791368bda"}'></script><!-- End Cloudflare Web Analytics -->
